# rust-ontologist

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cytoscape-navigator.js  cytoscape-node-html-label.min.js  cytoscape.js-navigator.css  index.html
.github/workflows/: rust.yml
scripts/: open.sh  serve.sh
src/: cli.rs  crutches.rs  ir.rs  main.rs  manifest.rs  output.rs  syn_util.rs  template.rs  traverser.rs  web_server.rs
src/output/: cytoscape.rs
