[package]
name = "rust-ontologist"
version = "0.1.0"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#

[dependencies]
syn = { version = "2", features = ["full", "extra-traits", "printing"] }
quote = "1"
proc-macro2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.5"
derive_more = "0.99"
anyhow = "1"
displaydoc = "0.2"
log = "0.4"
pretty_env_logger = "0.4"
clap = { version = "4", features = ["derive", "env", "cargo"] }
prettyplease = "0.2"
glob = "0.3"
rayon = "1.6"
num-traits = "0.2"
num-derive = "0.3"
multipipe = "0.1"

# Server optional dependencies
rouille = { version = "3.6.2" }

[profile.release]
strip = true
